# kurashiru-fav

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
crawler/: selenium.py
domain/: recipe.py  scraping.py
infrastructure/: spreadsheet.py
