[tool.poetry]
name = "kurashiru-fav"
version = "0.1.0"
description = ""
authors = ["masashi kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.2"
bs4 = "^0.0.1"
gspread = "^5.2.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
